prover-ray/zkcdriver/testdata/synced/invalid/continue_01.zkc
//error:4:3-11:continue outside loop
fn f(x:u8) -> (r:u8) {
  r = 0
  continue
  return
}
